--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
     border-radius:0.80em;
     margin-left: auto;
     margin-right: auto;
+    padding: 2px;
 }
 
 .buttons {
@@ -122,7 +123,7 @@
 
 .fontButtons {
     font-size: max(2.5vh, 1vw);
-    padding: 0.4rem;
+    padding: min(0.4vh, 1vw);
 }
 
 .svgButtons {
